# hackathon-practice

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  interview.py  interview_app.py  pyproject.toml  simple.py
.claude/skills/frontend/: SKILL.md
.claude/skills/skill-template/: SKILL.md
.streamlit/: config.toml
apps/api/: Dockerfile
apps/api/src/api/: __init__.py  cli.py  config.py  export.py  extract.py  main.py
apps/api/src/api/agent/: __init__.py  cv_screening_graph.py  graph.py  llm.py  scoring.py  state.py
apps/api/src/api/agent/agents/: __init__.py  behavioral.py  classifier.py  coach.py  experience.py  hr_career.py  integrity.py  parser.py  questions.py  seniority.py  skill_match.py  technical.py
apps/api/src/api/agent/data/: __init__.py  golden_paths.py  sample_cvs.py  sample_jds.py
apps/api/src/api/routers/: __init__.py  interview.py
apps/web/: cv_screener_app.py  streamlit_app.py
docs/: DEMO_BRIEF.md  recruiter_screening.mmd
legacy/: app.py  main.py
