[project]
name = "hackathon-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-openai>=1.2.1",
    "langchain[groq]>=1.2.18",
    "langgraph>=1.1.10",
    "langsmith>=0.8.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.40.0",
]
