[project]
name = "hackathon-practice"
version = "0.1.0"
description = "Interview prep + CV-Screener LangGraph workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-openai>=1.2.1",
    "langchain[groq]>=1.2.18",
    "langgraph>=1.1.10",
    "langsmith>=0.8.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.40.0",
    # FastAPI scaffolding
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "typer>=0.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
api = "api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/src/api"]
